[gd_scene load_steps=5 format=3 uid="uid://bxsmphs2mdk86"]

[ext_resource type="PackedScene" uid="uid://l38pk6ndon88" path="res://platform.tscn" id="1_233i7"]
[ext_resource type="Script" path="res://tgb.gd" id="2_ycnig"]
[ext_resource type="Texture2D" uid="uid://2pyicbeipx4" path="res://Art/Go_Box/To_Go_Box_V1.png" id="3_xhyvr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w6sl4"]
size = Vector2(58, 58)

[node name="TGB" instance=ExtResource("1_233i7")]
script = ExtResource("2_ycnig")

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_w6sl4")

[node name="Sprite2D" parent="." index="1"]
scale = Vector2(1, 1)
texture = ExtResource("3_xhyvr")

[node name="Marker2D" type="Marker2D" parent="." index="2"]
position = Vector2(-23, 3)

[node name="Marker2D2" type="Marker2D" parent="." index="3"]
position = Vector2(0, 3)

[node name="Marker2D3" type="Marker2D" parent="." index="4"]
position = Vector2(23, 3)

[node name="Marker2D4" type="Marker2D" parent="." index="5"]
position = Vector2(-23, 20)

[node name="Marker2D5" type="Marker2D" parent="." index="6"]
position = Vector2(0, 20)

[node name="Marker2D6" type="Marker2D" parent="." index="7"]
position = Vector2(23, 20)
